// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:breadcrumb 1`] = `
<div>
  <div
    class="cxd-Breadcrumb"
  >
    <span
      class="cxd-Breadcrumb-item"
    >
      <a
        class="cxd-Breadcrumb-item-default"
        href="https://baidu.gitee.com/"
      >
        <i
          class="cxd-Icon fa fa-home cxd-Breadcrumb-icon"
        />
        <span
          class="cxd-TplField"
        >
          首页
        </span>
      </a>
    </span>
    <span
      class="cxd-Breadcrumb-separator"
    >
      &gt;
    </span>
    <span
      class="cxd-Breadcrumb-item"
    >
      <span
        class="cxd-Breadcrumb-item-default"
      >
        <span
          class="cxd-TplField"
        >
          上级页面
        </span>
      </span>
    </span>
    <span
      class="cxd-Breadcrumb-separator"
    >
      &gt;
    </span>
    <span
      class="cxd-Breadcrumb-item cxd-Breadcrumb-item-last"
    >
      <span
        class="cxd-Breadcrumb-item-default"
      >
        <span
          class="cxd-TplField"
        >
          当前页面
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Renderer:breadcrumb dropdown 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Breadcrumb"
          >
            <span
              class="cxd-Breadcrumb-item"
            >
              <a
                class="cxd-Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <i
                  class="cxd-Icon fa fa-home cxd-Breadcrumb-icon"
                />
                <span
                  class="cxd-TplField"
                >
                  首页
                </span>
              </a>
            </span>
            <span
              class="cxd-Breadcrumb-separator"
            >
              &gt;
            </span>
            <span
              class="cxd-Breadcrumb-item"
            >
              <span
                class="cxd-Breadcrumb-item-default"
              >
                <span
                  class="cxd-TplField"
                >
                  上级页面
                </span>
              </span>
              <span
                class="cxd-Breadcrumb-item-caret"
              >
                <icon-mock
                  classname="icon icon-caret"
                  icon="caret"
                />
              </span>
            </span>
            <span
              class="cxd-Breadcrumb-separator"
            >
              &gt;
            </span>
            <span
              class="cxd-Breadcrumb-item cxd-Breadcrumb-item-last"
            >
              <span
                class="cxd-Breadcrumb-item-default"
              >
                <span
                  class="cxd-TplField"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:breadcrumb separator 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Breadcrumb"
          >
            <span
              class="cxd-Breadcrumb-item"
            >
              <a
                class="cxd-Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <i
                  class="cxd-Icon fa fa-home cxd-Breadcrumb-icon"
                />
                <span
                  class="cxd-TplField"
                >
                  首页
                </span>
              </a>
            </span>
            <span
              class="cxd-Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="cxd-Breadcrumb-item"
            >
              <span
                class="cxd-Breadcrumb-item-default"
              >
                <span
                  class="cxd-TplField"
                >
                  上级页面
                </span>
              </span>
            </span>
            <span
              class="cxd-Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="cxd-Breadcrumb-item cxd-Breadcrumb-item-last"
            >
              <span
                class="cxd-Breadcrumb-item-default"
              >
                <span
                  class="cxd-TplField"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:breadcrumb var 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Breadcrumb"
          >
            <span
              class="cxd-Breadcrumb-item"
            >
              <a
                class="cxd-Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <span
                  class="cxd-TplField"
                >
                  首页
                </span>
              </a>
            </span>
            <span
              class="cxd-Breadcrumb-separator"
            >
              &gt;
            </span>
            <span
              class="cxd-Breadcrumb-item"
            >
              <span
                class="cxd-Breadcrumb-item-default"
              >
                <span
                  class="cxd-TplField"
                >
                  上级页面
                </span>
              </span>
            </span>
            <span
              class="cxd-Breadcrumb-separator"
            >
              &gt;
            </span>
            <span
              class="cxd-Breadcrumb-item cxd-Breadcrumb-item-last"
            >
              <span
                class="cxd-Breadcrumb-item-default"
              >
                <span
                  class="cxd-TplField"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
